--- a/app/src/main/res/layout/activity_quick_links.xml
+++ b/app/src/main/res/layout/activity_quick_links.xml
@@ -4,45 +4,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".Quick_links">
 
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="10dp"
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/menu" />
 
-        <TextView
-            android:id="@+id/club_aump"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:text="@string/quick_link"
-            android:textColor="@color/navyblue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+        >
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/amity_logo"
-            android:src="@drawable/official_logo"
-            android:layout_gravity="center"
-            />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/menu"
+                />
+
+            <TextView
+                android:id="@+id/club_aump"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/quick_link"
+                android:textColor="@color/navyblue"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="10dp" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:contentDescription="@string/amity_logo"
+                android:src="@drawable/official_logo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
 
      <ScrollView
          android:layout_width="match_parent"
@@ -78,7 +102,6 @@
              android:layout_height="wrap_content"
              android:text="@string/amity_web"
              android:textColor="@color/black"
-             android:textSize="18sp"
              android:textStyle="normal"
              android:layout_marginStart="5dp"
              android:layout_marginLeft="5dp" />
@@ -106,7 +129,6 @@
                     android:layout_marginLeft="5dp"
              android:text="@string/placement"
              android:textColor="@color/black"
-             android:textSize="18sp"
              android:textStyle="normal"
              />
             </LinearLayout>
@@ -133,7 +155,6 @@
                  android:text="@string/dist_learn"
                  android:padding="5dp"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
                  android:textStyle="normal"
                  />
 
@@ -163,7 +184,6 @@
                  android:layout_marginLeft="5dp"
                  android:text="@string/prog_web"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
                  android:textStyle="normal"
                  />
            </LinearLayout>
@@ -190,8 +210,6 @@
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
-
                  android:textStyle="normal"
                  />
           </LinearLayout>
@@ -218,8 +236,6 @@
                  android:layout_marginLeft="5dp"
                  android:text="@string/virtual360"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
-
                  android:textStyle="normal"
                  />
              </LinearLayout>
@@ -244,10 +260,8 @@
                  android:padding="5dp"
                  android:text="@string/acc"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
-
                  android:textStyle="normal"
                  />
 
@@ -273,10 +287,8 @@
                  android:padding="5dp"
                  android:text="@string/carrier"
                  android:textColor="@color/black"
-                 android:textSize="18sp"
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
-
                  android:textStyle="normal"
                  />
 
