--- a/app/src/main/res/layout/activity_upcoming_events.xml
+++ b/app/src/main/res/layout/activity_upcoming_events.xml
@@ -4,47 +4,67 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".Upcoming_events"
     >
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="30dp"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_marginBottom="50dp"
         android:layout_marginTop="10dp"
-        android:gravity="center">
+        >
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/app_name"
-            app:srcCompat="@drawable/menu" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 
-        <TextView
-            android:id="@+id/club_aump"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:text="@string/upcoming_events"
-            android:textColor="@color/navyblue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/menu"
+                />
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/amity_logo"
-            android:src="@drawable/official_logo"
-            android:layout_gravity="center"
-            />
+            <TextView
+                android:id="@+id/club_aump"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/upcoming_events"
+                android:textColor="@color/navyblue"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="10dp" />
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:contentDescription="@string/amity_logo"
+                android:src="@drawable/official_logo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -57,7 +77,8 @@
             android:layout_height="300dp"
             android:gravity="center"
             android:layout_marginLeft="50dp"
-            android:layout_marginStart="50dp" />
+            android:layout_marginStart="50dp"
+            />
     </ScrollView>
 
     <ScrollView
@@ -68,26 +89,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:padding="40dp"
+            android:layout_marginTop="50dp"
+            android:gravity="center">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:paddingStart="20dp"
-                android:paddingLeft="20dp"
-                android:paddingEnd="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="UseCompoundDrawables">
-
+                >
 
                 <ImageView
                     android:id="@+id/icon"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:contentDescription="@string/amity_sangathan"
                     android:src="@drawable/sangathan_logo" />
 
@@ -96,11 +112,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:padding="5dp"
                     android:text="@string/amity_sangathan"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
                     android:textStyle="normal" />
 
             </LinearLayout>
@@ -108,19 +121,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:paddingStart="20dp"
-                android:paddingLeft="20dp"
-                android:paddingEnd="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="UseCompoundDrawables">
+                >
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:contentDescription="@string/amichroma"
                     android:src="@drawable/amichroma" />
 
@@ -129,31 +134,19 @@
                     android:layout_width="234dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:padding="5dp"
                     android:text="@string/amichroma"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
                     android:textStyle="normal" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:paddingStart="20dp"
-                android:paddingLeft="20dp"
-                android:paddingEnd="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="UseCompoundDrawables">
-
+                >
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:contentDescription="@string/mediafest"
                     android:src="@drawable/fest" />
 
@@ -162,31 +155,20 @@
                     android:layout_width="239dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:padding="5dp"
                     android:text="@string/mediafest"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
                     android:textStyle="normal" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="128dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                android:paddingStart="20dp"
-                android:paddingLeft="20dp"
-                android:paddingEnd="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
-                tools:ignore="UseCompoundDrawables">
+                android:layout_height="100dp"
+               >
 
 
                 <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:contentDescription="@string/conference"
                     android:src="@drawable/conference" />
 
@@ -195,19 +177,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:padding="5dp"
                     android:text="@string/conference"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
                     android:textStyle="normal" />
 
             </LinearLayout>
 
-
         </LinearLayout>
     </ScrollView>
-
-
-
 </LinearLayout>
