--- a/app/src/main/res/layout/activity_guest_leadership.xml
+++ b/app/src/main/res/layout/activity_guest_leadership.xml
@@ -2,12 +2,12 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_leadership"
+    android:id="@+id/drawer_Gleadership"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".Leadership_Activity">
+    tools:context=".GuestLeadership">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -223,5 +223,5 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/menu_main" />
+        app:menu="@menu/menu_guest" />
 </androidx.drawerlayout.widget.DrawerLayout>
