Navigation Drawer Implemented

--- a/app/src/main/res/layout/activity_quick_links.xml
+++ b/app/src/main/res/layout/activity_quick_links.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drwaer_links"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,9 +9,35 @@
     android:orientation="vertical"
     tools:context=".Quick_links">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+
+
+
+
+    <LinearLayout
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="10dp"
+            >
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
@@ -25,6 +52,10 @@
             android:layout_height="match_parent"
             >
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
@@ -36,6 +67,19 @@
                 app:srcCompat="@drawable/menu"
                 />
 
+                <TextView
+                    android:id="@+id/club_aump"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/quick_link"
+                    android:textColor="@color/navyblue"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="10dp" />
             <TextView
                 android:id="@+id/club_aump"
                 android:layout_width="wrap_content"
@@ -50,6 +94,23 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="10dp" />
 
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:contentDescription="@string/amity_logo"
+                    android:src="@drawable/official_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.appcompat.widget.Toolbar>
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="60dp"
@@ -102,6 +163,7 @@
              android:layout_height="wrap_content"
              android:text="@string/amity_web"
              android:textColor="@color/black"
+             android:textSize="18sp"
              android:textStyle="normal"
              android:layout_marginStart="5dp"
              android:layout_marginLeft="5dp" />
@@ -129,6 +191,7 @@
                     android:layout_marginLeft="5dp"
              android:text="@string/placement"
              android:textColor="@color/black"
+             android:textSize="18sp"
              android:textStyle="normal"
              />
             </LinearLayout>
@@ -155,6 +218,7 @@
                  android:text="@string/dist_learn"
                  android:padding="5dp"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
                  android:textStyle="normal"
                  />
 
@@ -184,6 +248,7 @@
                  android:layout_marginLeft="5dp"
                  android:text="@string/prog_web"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
                  android:textStyle="normal"
                  />
            </LinearLayout>
@@ -210,6 +275,8 @@
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
+
                  android:textStyle="normal"
                  />
           </LinearLayout>
@@ -236,6 +303,8 @@
                  android:layout_marginLeft="5dp"
                  android:text="@string/virtual360"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
+
                  android:textStyle="normal"
                  />
              </LinearLayout>
@@ -260,8 +329,10 @@
                  android:padding="5dp"
                  android:text="@string/acc"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
+
                  android:textStyle="normal"
                  />
 
@@ -287,8 +358,10 @@
                  android:padding="5dp"
                  android:text="@string/carrier"
                  android:textColor="@color/black"
+                 android:textSize="18sp"
                  android:layout_marginStart="5dp"
                  android:layout_marginLeft="5dp"
+
                  android:textStyle="normal"
                  />
 
@@ -297,7 +370,14 @@
          </LinearLayout>
      </ScrollView>
 
+    </LinearLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_main" />
 
-</LinearLayout>
-
+</androidx.drawerlayout.widget.DrawerLayout>
