--- a/app/src/main/res/layout/activity_eforms_main.xml
+++ b/app/src/main/res/layout/activity_eforms_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/drawer_eforms"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,9 +9,29 @@
     android:orientation="vertical"
     tools:context=".eFormsMain">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+    <LinearLayout
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="10dp"
+            >
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
@@ -24,6 +45,10 @@
             android:layout_height="match_parent"
             >
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
@@ -35,6 +60,19 @@
                 app:srcCompat="@drawable/menu"
                 />
 
+                <TextView
+                    android:id="@+id/club_aump"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/e_forms"
+                    android:textColor="@color/navyblue"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="10dp" />
             <TextView
                 android:id="@+id/club_aump"
                 android:layout_width="wrap_content"
@@ -49,6 +87,23 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="10dp" />
 
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    android:contentDescription="@string/amity_logo"
+                    android:src="@drawable/official_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.appcompat.widget.Toolbar>
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="60dp"
@@ -137,8 +192,6 @@
 
     </androidx.cardview.widget.CardView>
 
-
-
     <androidx.cardview.widget.CardView
         android:id="@+id/form1"
         android:layout_width="350dp"
@@ -208,7 +261,15 @@
 
     </androidx.cardview.widget.CardView>
 
+    </LinearLayout>
 
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_main" />
 
-        </LinearLayout>
+        </androidx.drawerlayout.widget.DrawerLayout>
