--- a/app/src/main/res/layout/activity_leadership.xml
+++ b/app/src/main/res/layout/activity_leadership.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_leadership"
+    android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".Leadership_Activity"
-    >
+    tools:context=".Leadership_Activity">
 
+    <LinearLayout
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:minHeight="?attr/actionBarSize"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="10dp"
+                >
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
@@ -24,6 +44,10 @@
             android:layout_height="match_parent"
             >
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
@@ -35,6 +59,19 @@
                 app:srcCompat="@drawable/menu"
                 />
 
+                    <TextView
+                        android:id="@+id/club_aump"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/leadership"
+                        android:textColor="@color/navyblue"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView2"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginStart="10dp" />
             <TextView
                 android:id="@+id/club_aump"
                 android:layout_width="wrap_content"
@@ -49,6 +86,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="10dp" />
 
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="8dp"
+                        android:contentDescription="@string/amity_logo"
+                        android:src="@drawable/official_logo"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="60dp"
@@ -65,16 +116,21 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
+            </androidx.appcompat.widget.Toolbar>
+
+        </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Leadership_Activity">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".Leadership_Activity">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -147,7 +203,7 @@
                 android:layout_marginTop="10dp"
                 />
 
-        </LinearLayout>
+                </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -196,9 +252,9 @@
                         android:layout_marginTop="10dp"
                         />
 
-                </LinearLayout>
+                        </LinearLayout>
 
-                </LinearLayout>
+                    </LinearLayout>
 
                 <TextView
                     android:id="@+id/descleader2"
@@ -212,8 +268,19 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="10dp"
 
-                    />
+                        />
+                </LinearLayout>
             </LinearLayout>
+        </ScrollView>
+
+
     </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_main" />
+</androidx.drawerlayout.widget.DrawerLayout>
